Archive2/6b/be3a44df482b5a/output
main.cpp:6:17: error: variable or field ‘myfunction’ declared void
 void myfunction(doesntexist argument)
                 ^
main.cpp:6:17: error: ‘doesntexist’ was not declared in this scope
